--- a/sparkles-jupyter-notebook/umbrel-app.yml
+++ b/sparkles-jupyter-notebook/umbrel-app.yml
@@ -1,19 +1,28 @@
+manifestVersion: 1
 id: sparkles-jupyter-notebook
 name: Jupyter Notebook
-version: "1.0.0"
-releaseNotes: >
-  Initial release of Jupyter Notebook on Umbrel.
+tagline: Interactive Python in your browser
 icon: ./icon.svg
-description: >
-  Run Python code interactively via a web-based Jupyter Notebook interface.
-developer:
-  name: Jakub Karafa
-  email: your@email.com
-  website: https://karafa.eu
-  github: https://github.com/jakubkarafa
-dependencies: []
+category: Development
+version: "1.0.0"
+port: 8888
+description: >-
+  A powerful and flexible notebook interface for Python development,
+  running directly from your Umbrel.
+
+  Write code, visualize data, and build experiments in your browser.
+
+developer: Jakub Karafa
+website: https://karafa.eu
+submitter: Jakub Karafa
+submission: https://github.com/jakubkarafa/umbrel-community-app-store
 repo: https://github.com/jakubkarafa/umbrel-community-app-store
 support: https://github.com/jakubkarafa/umbrel-community-app-store/issues
-license: MIT
-gallery: []
-port: 8888
+gallery:
+  - https://i.imgur.com/yyVG0Jb.jpeg
+releaseNotes: >-
+  Initial release of Jupyter Notebook on Umbrel.
+dependencies: []
+path: ""
+defaultUsername: ""
+defaultPassword: ""
