--- a/sparkles-jupyter-notebook/umbrel-app.yml
+++ b/sparkles-jupyter-notebook/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: sparkles-jupyter-notebook
 name: Jupyter Notebook
 tagline: Interactive Python in your browser
-icon: ./icon.svg
+icon: https://upload.wikimedia.org/wikipedia/commons/3/38/Jupyter_logo.svg
 category: Development
 version: "1.0.0"
 port: 8888
