--- a/jakubkarafa-tandoor-recipes/docker-compose.yml
+++ b/jakubkarafa-tandoor-recipes/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   app_proxy:
     environment:
-      APP_HOST: jakubkarafa-tandoor-recipes_web_1
+      APP_HOST: tandoor_web
       APP_PORT: 8080
 
   web:
