--- a/jakubkarafa-jupyter-lab/umbrel-app.yml
+++ b/jakubkarafa-jupyter-lab/umbrel-app.yml
@@ -17,6 +17,9 @@ repo: https://github.com/jupyterlab/jupyterlab
 support: https://discourse.jupyter.org/c/jupyterlab/17
 gallery:
   - https://jupyterlab.readthedocs.io/en/latest/_images/jupyterlab.png
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
 releaseNotes: >-
   Initial JupyterLab release for Umbrel.
 dependencies: []
